// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders Accent Button 1`] = `
.emotion-0 {
  font-family: "Roboto",sans-serif;
  display: inline-block;
  background: #ffffff;
  position: relative;
  margin: 0;
  padding: 0 1.5625rem;
  width: 12.5rem;
  max-width: 100%;
  height: 2.625rem;
  line-height: 2.625rem;
  box-shadow: 0 0.125rem 0.3125rem rgba(0,0,0,0.15);
  border: 0.0625rem solid #333333;
  cursor: pointer;
  box-sizing: border-box;
  border-radius: 0.125rem;
  text-decoration: none;
  font-size: 1rem;
  font-weight: 400;
  color: #333333;
  text-align: center;
  -webkit-transition: opacity 0.25s ease;
  transition: opacity 0.25s ease;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  background: #333333;
  color: #ffffff;
}

.emotion-0:hover {
  opacity: 0.75;
}

.emotion-0:active {
  box-shadow: 0 0 0.3125rem rgba(0,0,0,0.15);
}

.emotion-0:focus {
  border-color: #2196F3;
}

.emotion-0:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

<button
  className="emotion-0"
>
  Test
</button>
`;

exports[`renders Button 1`] = `
.emotion-0 {
  font-family: "Roboto",sans-serif;
  display: inline-block;
  background: #ffffff;
  position: relative;
  margin: 0;
  padding: 0 1.5625rem;
  width: 12.5rem;
  max-width: 100%;
  height: 2.625rem;
  line-height: 2.625rem;
  box-shadow: 0 0.125rem 0.3125rem rgba(0,0,0,0.15);
  border: 0.0625rem solid #333333;
  cursor: pointer;
  box-sizing: border-box;
  border-radius: 0.125rem;
  text-decoration: none;
  font-size: 1rem;
  font-weight: 400;
  color: #333333;
  text-align: center;
  -webkit-transition: opacity 0.25s ease;
  transition: opacity 0.25s ease;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
}

.emotion-0:hover {
  opacity: 0.75;
}

.emotion-0:active {
  box-shadow: 0 0 0.3125rem rgba(0,0,0,0.15);
}

.emotion-0:focus {
  border-color: #2196F3;
}

.emotion-0:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

<button
  className="emotion-0"
>
  Test
</button>
`;

exports[`renders Icon Button 1`] = `
.emotion-0 {
  display: inline-block;
  position: relative;
  margin: 0;
  background: transparent;
  box-shadow: none;
  border: 0;
  padding: 0.3125rem;
  width: 2.625rem;
  height: 2.625rem;
  line-height: 2.5rem;
  cursor: pointer;
  box-sizing: border-box;
  border-radius: 50%;
  text-decoration: none;
  font-size: 1rem;
  font-weight: 400;
  color: #333333;
  text-align: center;
  -webkit-transition: opacity 0.25s ease;
  transition: opacity 0.25s ease;
  text-indent: -999999rem;
}

.emotion-0:hover {
  opacity: 0.75;
}

.emotion-0:before {
  position: absolute;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  display: inline-block;
  content: "";
  width: 1.5rem;
  height: 1.5rem;
}

<button
  className="emotion-0"
>
  Test
</button>
`;

exports[`renders Minimal Button 1`] = `
.emotion-0 {
  font-family: "Roboto",sans-serif;
  display: inline-block;
  background: #ffffff;
  position: relative;
  margin: 0;
  padding: 0 1.5625rem;
  width: 12.5rem;
  max-width: 100%;
  height: 2.625rem;
  line-height: 2.625rem;
  box-shadow: 0 0.125rem 0.3125rem rgba(0,0,0,0.15);
  border: 0.0625rem solid #333333;
  cursor: pointer;
  box-sizing: border-box;
  border-radius: 0.125rem;
  text-decoration: none;
  font-size: 1rem;
  font-weight: 400;
  color: #333333;
  text-align: center;
  -webkit-transition: opacity 0.25s ease;
  transition: opacity 0.25s ease;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  border-radius: 0;
  border-top-color: transparent;
  border-left-color: transparent;
  border-right-color: transparent;
  background: transparent;
  box-shadow: none;
  text-align: left;
  padding: 0;
}

.emotion-0:hover {
  opacity: 0.75;
}

.emotion-0:active {
  box-shadow: 0 0 0.3125rem rgba(0,0,0,0.15);
}

.emotion-0:focus {
  border-color: #2196F3;
}

.emotion-0:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

.emotion-0:active {
  box-shadow: none;
}

<button
  className="emotion-0"
>
  Test
</button>
`;
